# django-migration-checker

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
django_migration_checker/: __init__.py  base.py  checker.py
django_migration_checker/cli/: find_conflicts.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_checker.py  test_cli.py  test_extract_list.py
tests/test_data/01_no_conflicts/alpacas/migrations/: 0001_initial.py
tests/test_data/01_no_conflicts/llamas/migrations/: 0002_second.py
tests/test_data/02_basic_conflicts/alpacas/migrations/: 0002_new.py
tests/test_data/03_inter_app_conflict/alpacas/migrations/: 0001_initial.py
tests/test_data/04_squashed_no_conflict/llamas/migrations/: 0001_initial.py  0001_squashed_0002_auto_20190509_1610.py  0002_new_one.py
tests/test_data/05_squashed_basic_conflict/alpacas/migrations/: 0001_initial.py
tests/test_data/05_squashed_basic_conflict/llamas/migrations/: 0001_squashed_0002_auto_20190509_1610.py
tests/test_data/06_no_conflicts_double_quotes/llamas/migrations/: 0002_second.py
