[bumpversion]
current_version = 0.8.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = {new_version}

[bumpversion:file:django_migration_checker/__init__.py]
search = __version__ = '{current_version}'
replace = {new_version}

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = 
	venv,
	.venv,
	.git,
	docs,
	.eggs,
	tests/test_data

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[tool.isort]
profile = "black"

